# High-Pain-Cross-Study-EEG

./: .gitignore  LICENSE  README.md  environment.yml  setup.cfg
notebooks/Analysis/: matlab_pseudocode.ipynb
notebooks/Preprocessing/: adjust_resampling.ipynb  concatenate_epochs_vhdr.ipynb  convert_epochs_mats_to_pkls.ipynb  convert_info_mats_to_pkls.ipynb  convert_to_mat.ipynb  crop_noisy_spans.ipynb  preprocess.ipynb  report_percent_dropped.ipynb  reprocess_raw_and_epochs.ipynb  resample_existing_data.ipynb  resample_info.ipynb  sample_for_cleaned_resting.ipynb  sample_for_source_loc.ipynb  source_localization.ipynb
scripts/: README.md
scripts/ssm/: ssm.asv  ssm.m  temp_pseudocode.m
scripts/ssm/utils/: EM_LDS_estimator.asv  EM_LDS_estimator.m  KF_estimator.m  KF_estimator_LOOP_ITER.m  drop_bad_chs.m  extract_features.m  get_params.m  keep_trials.m  load_data.m  load_stc_mat.m  train_dataloader.m
src/: __init__.py
src/configs/: config.py  readme.md
src/preprocessing/: classes.py  clean_resting.py  processors.py  sample_for_missing_keypresses.py  sl_utils.py  utils.py  utils_epo.py
src/processor/: __init__.py
src/utils/: config.py
src/visualizer/: __init__.py
